# Vazel

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_flags.txt  format_code.sh  main.cpp
.github/workflows/: build.yml
include/Vazel/: UUID.hpp  VException.hpp  core.hpp  ecs.hpp
include/Vazel/Components/: Component.hpp  ComponentsManager.hpp
include/Vazel/Entity/: Entity.hpp  EntityManager.hpp
include/Vazel/System/: System.hpp
include/Vazel/World/: World.hpp
include/Vazel/core/: App.hpp  State.hpp  _priv.hpp
include/Vazel/core/App/: App.hpp
include/Vazel/core/Event/: Event.hpp
include/Vazel/core/Renderer/: Renderer.hpp
include/Vazel/core/ResourceHandler/: ResourceHandler.hpp
include/Vazel/core/State/: State.hpp
include/Vazel/ecs/Components/: Component.hpp  ComponentsManager.hpp
include/Vazel/ecs/Entity/: Entity.hpp  EntityManager.hpp
include/Vazel/ecs/System/: System.hpp
include/Vazel/ecs/World/: World.hpp
src/: CMakeLists.txt  UUID.cpp
src/Components/: Component.cpp  ComponentsManager.cpp
src/Entity/: Entity.cpp  EntityManager.cpp
src/System/: System.cpp
src/World/: World.cpp
src/core/: App.cpp  State.cpp
src/core/App/: App.cpp
src/core/Event/: Event.cpp
src/core/Renderer/: Renderer.cpp
src/core/ResourceHandler/: ResourceHandler.cpp
src/core/State/: State.cpp
src/ecs/Components/: Component.cpp  ComponentsManager.cpp
src/ecs/Entity/: Entity.cpp  EntityManager.cpp
src/ecs/System/: System.cpp
src/ecs/World/: World.cpp
src/entity/: entity.cpp
src/include/Vazel/Entity/: Entity.hpp
tests/: CMakeLists.txt  tests_components.hpp
tests/Components/: test_ComponentsManager.cpp
tests/Entity/: test_Entity.cpp  test_EntityManager.cpp
tests/System/: test_System.cpp
tests/World/: test_World.cpp
tests/entity/: test_entity.cpp
